--- a/manager-app/src/main/resources/templates/catalogue/products/list.html
+++ b/manager-app/src/main/resources/templates/catalogue/products/list.html
@@ -7,6 +7,11 @@
 <body>
 <a data-th-href="@{/catalogue/products/create}"> + Создать</a>
 <h1>Products</h1>
+<form method="get" data-th-action="@{/catalogue/products/list}">
+    <label>Фильтр: <input type="text" name="filter" data-th-text="${filter}">
+        <button type="submit">поиск</button>
+    </label>
+</form>
 <table>
     <thead>
     <tr>
