--- a/customer-app/src/main/resources/templates/customer/products/favourites.html
+++ b/customer-app/src/main/resources/templates/customer/products/favourites.html
@@ -5,11 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Products</title>
+    <title>Favourites Products</title>
 </head>
 <body>
+<a data-th-href="@{customer/products/list}">All products</a>
 
-<a data-th-href="@{/customer/products/favourites}">Favorites products</a>
 <h1>Products</h1>
 <form>
     <label>Filer: <input type="text" name="filter" data-th-value="${filter}">
