07: [WebFlux] add validation on the clientCustomerService; add client for remote call into clientCustomerService;

--- a/customer-app/src/main/resources/templates/customer/products/favourites.html
+++ b/customer-app/src/main/resources/templates/customer/products/favourites.html
@@ -8,7 +8,7 @@
     <title>Favourites Products</title>
 </head>
 <body>
-<a data-th-href="@{customer/products/list}">All products</a>
+<a data-th-href="@{/customer/products/list}">All products</a>
 
 <h1>Products</h1>
 <form>
